# welliptic

./: .dockerignore  .env.example  .env.railway.example  .gitignore  Dockerfile  Makefile  PRE_AUDIT_REPORT.md  README.md  __init__.py  docker-compose.yml  main.py  package-lock.json  package.json  pyrightconfig.json  railway.json  requirements.txt  server.py
contracts/: sample_high_risk.txt  sample_nda.txt
demo_output/: demo_result.json  sample_nda.txt  sample_run.json
docs/: ARCHITECTURE.md  JUDGE_RUNBOOK.md  architecture.md  widl_reference.md
rust_applets/: Cargo.toml  build.sh
rust_applets/clause_extractor/: Cargo.toml
rust_applets/clause_extractor/src/: lib.rs
rust_applets/risk_scorer/: Cargo.toml
rust_applets/risk_scorer/src/: lib.rs
scripts/: deploy.sh  deploy_applets.mjs  encode_wallet.py  verify_deploy.sh  verify_endpoints.py  verify_real_mcp.py
src/: __init__.py  config.py  mcp_server.py  types.py
src/agent/: __init__.py  adk_workflow.py  audit.py  control_loop.py  graph.py  nodes.py  state.py
src/api/: server.py
src/applets/: __init__.py  clause_extractor.py  clause_extractor.widl  lexaudit.yaml  risk_scorer.py  risk_scorer.widl
src/tools/: __init__.py  local_fallback.py  router.py
tests/: conftest.py  test_api.py  test_applets_parsing.py  test_audit.py  test_cli.py  test_control_loop.py  test_local_fallback.py
ui/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
ui/app/: globals.css  layout.tsx  page.tsx
ui/components/: AnalysisScreen.tsx  Navbar.tsx  (+3 more)
web/: index.html
(+4 files in other folders)
